[package]
name = "api-server-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-server = { path = "../../crates/agent-mem-server" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
