[package]
name = "client-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-client = { path = "../../crates/agent-mem-client" }
agent-mem-core = { path = "../../crates/agent-mem-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
anyhow = "1.0"
