[package]
name = "client-server-integration-test"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-client = { path = "../../crates/agent-mem-client" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[[bin]]
name = "integration-test"
path = "src/main.rs"
