[package]
name = "agentmem-complete-demo"
version = "0.1.0"
edition = "2021"
description = "Complete demonstration of AgentMem functionality"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
agent-mem-client = { path = "../../crates/agent-mem-client" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
