[package]
name = "compute-optimization-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-compat = { path = "../../crates/agent-mem-compat" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "compute-optimization-demo"
path = "src/main.rs"
