[package]
name = "deepseek-test"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-llm = { path = "../../crates/agent-mem-llm" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
