[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
agent-mem-utils = { path = "../../crates/agent-mem-utils" }
agent-mem-config = { path = "../../crates/agent-mem-config" }
agent-mem-core = { path = "../../crates/agent-mem-core" }
tokio = { version = "1.0", features = ["full"] }
