[package]
name = "embedding-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embedding_demo"
path = "src/main.rs"

[dependencies]
agent-mem-embeddings = { path = "../../crates/agent-mem-embeddings" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
