[package]
name = "enhanced-messages-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-client = { path = "../../crates/agent-mem-client" }
agent-mem-compat = { path = "../../crates/agent-mem-compat" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
agent-mem-config = { path = "../../crates/agent-mem-config" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "enhanced-messages-demo"
path = "src/main.rs"
