[package]
name = "enterprise-monitoring-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-compat = { path = "../../crates/agent-mem-compat" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[[bin]]
name = "enterprise-monitoring-demo"
path = "src/main.rs"
